Chore: Make index.html and arrabbiata.html to spec
Changed the title of index.html to "Recipes" and added headers to
arrabbiata.html.

--- a/recipes/arrabbiata.html
+++ b/recipes/arrabbiata.html
@@ -9,7 +9,7 @@
     <h1>Penne all'Arrabbiata</h1>
     <img src="../images/penne-arrabbiata.jpg" width="400">
     <p>
-        Ingredients:
+        <h3>Ingredients</h3>
         <ul>
             <li>Splash of olive oil</li>
             <li>2 large cloves of garlic</li>
@@ -23,7 +23,7 @@
             <li>Fresh basil leaves</li>
         </ul>
 
-        Steps:
+        <h3>Steps</h3>
         <ol>
             <li>Add a tablespoon of salt to a large pot of water and bring it to a boil while working on the sauce (sugo).</li>
             <li>Add a good splash of olive oil to another pot and add crushed garlic and chopped onion.</li>
