--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         </a>
     </p>
     <p>
-        
+        <a href="./recipes/chilli.html">Avant Garde Chilli</a>
     </p>
     <p>
-
+        <a href="./recipes/chilli.html">
+            <img src="images/chilli.jpg" width="400">
+        </a>
     </p>
 </body>
 </html>
