Feat: Add final recipe according to template

--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
             <img src="images/chilli.jpg" width="400">
         </a>
     </p>
+    <p>
+        <a href="./recipes/pancakes.html">Dutch Pancakes</a>
+    </p>
+    <p>
+        <a href="./recipes/pancakes.html">
+            <img src="images/pannenkoeken.jpg" width="400">
+        </a>
+    </p>
 </body>
 </html>
