--- a/recipes/chilli.html
+++ b/recipes/chilli.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penne all'Arrabbiata</title>
+    <title>Avant Garde Chilli</title>
 </head>
 <body>
-    <h1>Penne all'Arrabbiata</h1>
+    <h1>Avant Garde Chilli</h1>
     <img src="../images/chilli.jpg" width="400">
     <p>
         <h3>Ingredients</h3>
