Chore: Add alt text to all images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <p>
         <a href="./recipes/arrabbiata.html">
-            <img src="images/penne-arrabbiata.jpg" width="400">
+            <img src="images/penne-arrabbiata.jpg" alt="penne arrabbiata" width="400">
         </a>
     </p>
     <p>
@@ -20,7 +20,7 @@
     </p>
     <p>
         <a href="./recipes/chilli.html">
-            <img src="images/chilli.jpg" width="400">
+            <img src="images/chilli.jpg" alt="chilli dish with sweet potato" width="400">
         </a>
     </p>
     <p>
@@ -28,7 +28,7 @@
     </p>
     <p>
         <a href="./recipes/pancakes.html">
-            <img src="images/pannenkoeken.jpg" width="400">
+            <img src="images/pannenkoeken.jpg" alt="Dutch pancakes" width="400">
         </a>
     </p>
 </body>
