--- a/recipes/arrabbiata.html
+++ b/recipes/arrabbiata.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Penne all'Arrabbiata</h1>
-    <img src="../images/penne-arrabbiata.jpg" width="400">
+    <img src="../images/penne-arrabbiata.jpg" alt="penne arrabbiata" width="400">
     <p>
         <h3>Ingredients</h3>
         <ul>
