--- a/recipes/chilli.html
+++ b/recipes/chilli.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Avant Garde Chilli</h1>
-    <img src="../images/chilli.jpg" width="400">
+    <img src="../images/chilli.jpg" alt="chilli dish with sweet potato" width="400">
     <p>
         <h3>Ingredients</h3>
         <ul>
