--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Dutch Pancakes</h1>
-    <img src="../images/pannenkoeken.jpg" width="400">
+    <img src="../images/pannenkoeken.jpg" alt="Dutch pancakes" width="400">
     <p>
         <h3>Ingredients</h3>
         <ul>
