Feat: Add styles.css to the project
Added some basic styling for CSS Foundations. It does not look good,
just a first try for practice.

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -4,36 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dutch Pancakes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Dutch Pancakes</h1>
     <img src="../images/pannenkoeken.jpg" alt="Dutch pancakes" width="400">
     <p>
         <h3>Ingredients</h3>
-        <ul>
-            <li>500 ml unsweetened soy milk</li>
-            <li>250 grams of flour</li>
-            <li>Block of vegan butter</li>
-            <li>Either:</li>
-            <ul>
-                <li>1 cup of chickpea fluid from a can (aguafaba)</li>
-                <li>3 tblsp of ground flaxseed mixed with 6 tblsp of water</li>
+        <div class="container">
+            <ul class="list">
+                <li> 500 ml unsweetened soy milk</li>
+                <li> 250 grams of flour</li>
+                <li> Block of vegan butter</li>
+                <li> Either:</li>
+                <ul>
+                    <li> 1 cup of chickpea fluid from a can (aguafaba)</li>
+                    <li> 3 tblsp of ground flaxseed mixed with 6 tblsp of water</li>
+                </ul>
             </ul>
-        </ul>
+        </div>
 
         <h3>Steps</h3>
-        <ol>
-            <li>Put the flour in a large mixing bowl and slowly stir in the milk</li>
-            <li>Keep stirring until you have a smooth, thin batter</li>
-            <li>Add the aguafaba or flaxseed mix to the batter and stir until you see bubbles</li>
-            <li>Heat a nice cube of butter in a frying pan and cover the entire surface of the pan with it</li>
-            <li>When the butter is hot, add a ladle of batter to the pan and swirl it around until the entire pan is covered</li>
-            <li>You can add in sliced apple, vegan bacon or vegan cheese if you like</li>
-            <li>When the top of the pancake is dry, flip it over and bake the other side</li>
-            <li>While baking the next one, keep the finished pancakes warm in the oven</li>
-            <li>Repeat until you have no batter left</li>
-            <li>Add your favourite toppings. Hint: the Dutch mainly use regular thick syrup and powdered sugar and roll them up!</li>
-        </ol>
+        <div class="container">
+            <ol class="list">
+                <li> Put the flour in a large mixing bowl and slowly stir in the milk</li>
+                <li> Keep stirring until you have a smooth, thin batter</li>
+                <li> Add the aguafaba or flaxseed mix to the batter and stir until you see bubbles</li>
+                <li> Heat a nice cube of butter in a frying pan and cover the entire surface of the pan with it</li>
+                <li> When the butter is hot, add a ladle of batter to the pan and swirl it around until the entire pan is covered</li>
+                <li> You can add in sliced apple, vegan bacon or vegan cheese if you like</li>
+                <li> When the top of the pancake is dry, flip it over and bake the other side</li>
+                <li> While baking the next one, keep the finished pancakes warm in the oven</li>
+                <li> Repeat until you have no batter left</li>
+                <li> Add your favourite toppings. 
+                    Hint: the Dutch mainly use regular thick syrup and powdered sugar and roll them up!</li>
+            </ol>
+        </div>
     </p>
     <p>
         <a href="../index.html">Back to all recipes</a>
