--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Recipes</h1>
@@ -12,7 +13,7 @@
     </p>
     <p>
         <a href="./recipes/arrabbiata.html">
-            <img src="./images/penne-arrabbiata.jpg" alt="penne arrabbiata" width="400">
+            <img src="./images/penne-arrabbiata.jpg" alt="penne arrabbiata">
         </a>
     </p>
     <p>
@@ -20,7 +21,7 @@
     </p>
     <p>
         <a href="./recipes/chilli.html">
-            <img src="./images/chilli.jpg" alt="chilli dish with sweet potato" width="400">
+            <img src="./images/chilli.jpg" alt="chilli dish with sweet potato">
         </a>
     </p>
     <p>
@@ -28,7 +29,7 @@
     </p>
     <p>
         <a href="./recipes/pancakes.html">
-            <img src="./images/pannenkoeken.jpg" alt="Dutch pancakes" width="400">
+            <img src="./images/pannenkoeken.jpg" alt="Dutch pancakes">
         </a>
     </p>
 </body>
