--- a/recipes/arrabbiata.html
+++ b/recipes/arrabbiata.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penne all'Arrabbiata</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Penne all'Arrabbiata</h1>
     <img src="../images/penne-arrabbiata.jpg" alt="penne arrabbiata" width="400">
     <p>
         <h3>Ingredients</h3>
-        <ul>
-            <li>Splash of olive oil</li>
-            <li>2 large cloves of garlic</li>
-            <li>1 medium sized onion</li>
-            <li>1 red chilli pepper</li>
-            <li>Italian herb mix</li>
-            <li>2 cans of diced tomatoes</li>
-            <li>1 tin of tomato paste</li>
-            <li>Salt</li>
-            <li>500 grams of penne</li>
-            <li>Fresh basil leaves</li>
-        </ul>
-
+        <div class="container">
+            <ul>
+                <li>Splash of olive oil</li>
+                <li>2 large cloves of garlic</li>
+                <li>1 medium sized onion</li>
+                <li>1 red chilli pepper</li>
+                <li>Italian herb mix</li>
+                <li>2 cans of diced tomatoes</li>
+                <li>1 tin of tomato paste</li>
+                <li>Salt</li>
+                <li>500 grams of penne</li>
+                <li>Fresh basil leaves</li>
+            </ul>
+        </div>
         <h3>Steps</h3>
         <ol>
             <li>Add a tablespoon of salt to a large pot of water and bring it to a boil while working on the sauce (sugo).</li>
