Feat: Add Pancake flex-wrap CSS style

--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Recipes</h1>
-    <p>
-        <a href="./recipes/arrabbiata.html">Penne all'Arrabbiata</a>
-    </p>
-    <p>
-        <a href="./recipes/arrabbiata.html">
-            <img src="./images/penne-arrabbiata.jpg" alt="penne arrabbiata">
-        </a>
-    </p>
-    <p>
-        <a href="./recipes/chilli.html">Avant Garde Chilli</a>
-    </p>
-    <p>
-        <a href="./recipes/chilli.html">
-            <img src="./images/chilli.jpg" alt="chilli dish with sweet potato">
-        </a>
-    </p>
-    <p>
-        <a href="./recipes/pancakes.html">Dutch Pancakes</a>
-    </p>
-    <p>
-        <a href="./recipes/pancakes.html">
-            <img src="./images/pannenkoeken.jpg" alt="Dutch pancakes">
-        </a>
-    </p>
+    <h1>Vegan Recipes</h1>
+    <div class="recipes">
+        <div class="recipe">
+            <a href="./recipes/arrabbiata.html">Penne all'Arrabbiata</a>
+            <p>
+                <a href="./recipes/arrabbiata.html">
+                    <img src="./images/penne-arrabbiata.jpg" alt="penne arrabbiata">
+                </a>
+            </p>
+        </div>
+        <div class="recipe">
+            <a href="./recipes/chilli.html">Avant Garde Chilli</a>
+            <p>
+                <a href="./recipes/chilli.html">
+                    <img src="./images/chilli.jpg" alt="chilli dish with sweet potato">
+                </a>
+            </p>
+        </div>
+        <div class="recipe">
+            <a href="./recipes/pancakes.html">Dutch Pancakes</a>
+            <p>
+                <a href="./recipes/pancakes.html">
+                    <img src="./images/pannenkoeken.jpg" alt="Dutch pancakes">
+                </a>
+            </p>
+        </div>
+    </div>  
 </body>
 </html>
